--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": [
+    ["@babel/plugin-transform-arrow-functions"], //转译箭头函数
     ["@babel/plugin-transform-classes"],
     ["@babel/plugin-proposal-class-properties"],
     ["@babel/plugin-transform-computed-properties"]
-    // ["@babel/plugin-transform-destructuring"],
-    // ["@babel/plugin-transform-arrow-functions",{ "spec": true }] //转译箭头函数
+    // ["@babel/plugin-transform-destructuring"]
 ]
 }
