--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --source-map --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server  --host 0.0.0.0 --open --config webpack.config.js",
+    "test": "NODE_ENV=test webpack-dev-server  --host 0.0.0.0 --open --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -28,16 +28,19 @@
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-router-dom": "^5.1.2",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2",
-    "white-web-sdk": "^2.3.9"
+    "white-web-sdk": "^2.3.12"
   },
   "dependencies": {
+    "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
+    "webrtc-zego": "^1.4.0",
     "white-react-sdk": "^2.3.9"
   }
 }
